.1.2 release; fixes overflow bug in popup.html, adds debug console method to console logging. bump version number

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -21,6 +21,7 @@ body {
 	padding:0;
 	-webkit-border-radius: 20px;
 	font-family: 'Proxima Nova',arial,sans-serif;
+	overflow:hidden;
 }
 
 .big_art {
